# ateru

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  ateru_codeberg_key  ateru_codeberg_key.pub  cog.toml  pipeline_config.yaml  pyproject.toml  setup.cfg
.github/: release-yml.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  chore.md  chore.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump.yml  release.yml
ateru/cli/: main.py
ateru/cli/commands/: project.py  scan.py  settings.py  start.py
ateru/core/: api.py  api_runtime.py
ateru/core/asset/: create.py
ateru/core/config/: create.py  loader.py  model.py  paths.py
ateru/core/dcc/: factory.py
ateru/core/dcc/blender/: adapter.py
ateru/core/project/: create.py  delete.py  load.py  scan.py
ateru/core/shot/: create.py  delete.py  load.py  model.py
ateru/ui/uix/: launcher.ui  settings.ui  xolo.qrc
ateru/ui/windows/: show_asset_manager.py  show_launcher.py  show_manager.py  show_settings.py
cli/: main.py
cli/commands/: project.py  settings.py
cli/xolo_cli/: main.py
cli/xolo_cli/commands/: launch.py  project.py  scan.py  settings.py  shot.py  start.py  version.py
config/: project_structure.yml
core/xolo_core/: api.py  logging.py  main.py  pyproject.toml  runtime.py  version_cache.json
core/xolo_core/asset/: create.py  model.py  scan.py
core/xolo_core/config/: create.py  env.py  loader.py  model.py  paths.py  utility.py
core/xolo_core/extractors/: dcc.py
core/xolo_core/generators/: dcc_generator.py  declare_generator.py  texture_generator.py  variables_generator.py  version_generator.py
core/xolo_core/models/: asset_model.py  base.py  config_model.py  naming_model.py  project.py  shot.py
core/xolo_core/project/: create.py  delete.py  load.py  model.py  paths.py  scan.py
core/xolo_core/shot/: create.py  delete.py  load.py  model.py  scan.py
core/xolo_core/ui/: xolo_saver.ui  xolo_ui.py  xolo_window.py
core/xolo_core/updater/: installer.py
core/xolo_core/utils/: dcc_map.yml  format_show.py  logging.py  version_manager.py
dcc/: config.yml
dcc/blender/: pyproject.toml
dcc/gaffer/: pyproject.toml
dcc/nuke/: launch_ui.py  pyproject.toml
docs/: concepts.md  index.html  index.md  install.sh  installation.md  limitations.md  quickstart.md
gui/: pyproject.toml
resources/ocio/: studio-config-v2.2.0_aces-v1.3_ocio-v2.3.ocio
scripts/: set_up_unix.sh  set_up_windows.bat  setup_env.sh
src/ateru/cli/: main.py
src/ateru/core/: api.py  api_runtime.py  launcher.py
src/ateru/ui/: bar.py
src/xolo/core/rust/xolo_core/: Cargo.toml
src/xolo/core/rust/xolo_core/src/: system.rs  version.rs
test/: test_cli.py
tests/: test_cli.py  test_data_model.py  test_ui.py
ui/: show_launcher.py  show_manager.py  show_settings.py  show_settins.py
ui/uix/: launcher.ui  manager.ui  settings.ui
xolo/cli/: main.py
xolo/cli/commands/: project.py  scan.py  settings.py  shot.py  start.py
xolo/core/: api.py  api_runtime.py
xolo/core/asset/: create.py  scan.py
xolo/core/config/: create.py  env.py  model.py  paths.py
xolo/core/dcc/: base.py  factory.py
xolo/core/project/: create.py  delete.py  load.py  model.py  scan.py
xolo/core/shot/: create.py  delete.py  load.py  scan.py
xolo/ui/models/: project_table_model.py
xolo/ui/uix/: asset_manager.ui
xolo/ui/windows/: show_asset_manager.py  show_launcher.py  show_manager.py  show_settings.py
(+96 files in other folders)
