[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "xolo-pipeline"
version = "0.1.0-alpha.0"
description = "Open source VFX/Animation pipeline for freelancers and small studios."
authors = [{ name = "Ronny Ascencio" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "platformdirs==4.5.1",
    "requests>=2.32",
    "typing>=3.10.0.0",
    "pathlib>=1.0.1",
    "pyside6>=6.10.1",
    "pydantic>=2.12.5",
]

[project.scripts]
# Tu CLI actual de Python
xolo = "xolo.cli.python.main:app"

[tool.maturin]
python-source = "src"
module-name = "xolo.core._core"
include = ["config/**/*", "resources/**/*"]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.5.0",
    "build>=1.3.0",
    "commitizen>=4.10.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

