[project]
name = "xolo-pipeline"
version = "0.1.0a0"
description = "Open source VFX/Animation pipeline for freelancers and small studios."
authors = [{ name = "Ronny Ascencio" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"


dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.8,<3.0",
  "pyside6>=6.10.1",
  "tomli>=2.3.0",
  "tomli-w>=1.2.0",
  "typer>=0.21.1",
]

[project.scripts]
xolo = "cli.xolo_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["cli", "core"]

[tool.commitizen]
name = "cz_conventional_commits"



version = "0.1.0a17"

version_scheme = "pep440"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
