[package]
name = "xolo_core"
version = "0.1.0"
edition = "2024"


[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0.0"
log = "0.4.29"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.27"
thiserror = "2.0.17"
tokio = "1.48.0"
